Fixed text color

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
     </div>
     
 </div>
-<div class="card d-flex justify-content-center align-items-center bg-primary mt-5 mx-auto text-" style="width:50rem;height:15rem;">
-    <h2 class="card-title ">
+<div class="card d-flex justify-content-center align-items-center bg-primary mt-5 mx-auto p-5 text-center" style="width:50rem;height:15rem;">
+    <h2 class="mx-auto mb-3 card-title font-weight-bold text-white ">
         Sign Up Now So Your Selected Items Are Saved To Your Personal Cart 
     </h2>
     <div class="d-flex bg-white p-3 w-75">
